--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>観光NPSダッシュボード</title>
+  <title>EKKA's - 観光NPSダッシュボード</title>
   <!-- A-Frame(VR表示用) -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <style>
@@ -599,7 +599,7 @@
   </div>
 
 <div id="pre">
-  <h1>観光NPSダッシュボード</h1>
+  <h1>EKKA's - 観光NPSダッシュボード</h1>
   <select id="selpref"></select>
   <select id="selcity"></select><br>
   <button id="btn_start">観光NPSダッシュボードを表示する</button>
