--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
   <!-- 2D ダッシュボード -->
   <div class="section-title">
-    <span><strong id="to_back">2D DASHBOARD</strong> / <span class=rep_city>浅水二日町</span> AREA INDEX</span>
+    <span><strong id="to_back">EKKA's NPS DASHBOARD</strong> / <span class=rep_city>浅水二日町</span> AREA INDEX</span>
   </div>
 
   <div class="layout">
@@ -501,7 +501,7 @@
         <div class="card-inner current-wrap">
           <div>
             <div class="dotted-label">CURRENT VALUE</div>
-            <div style="font-size:13px;color:var(--text-sub);">前日比</div>
+            <div style="font-size:13px;color:var(--text-sub);">前月比</div>
             <div class="gap-chip">
               <span>現在順位:<span class=rep_rank_me>2</span>位</span>|<span><span class=rep_rank_me_next>2</span>位まであと <span class=rep_rank_me_next_p>10P</span></span>
             </div>
