add tag for mobiles

--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
+<!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
   <title>EKKA's - 観光NPSダッシュボード</title>
   <!-- A-Frame(VR表示用) -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
